# youtube_transcriber

./: Dockerfile  README.md  artigo_dede.txt  pyproject.toml  translate_txt.py
src/transcritor/: asr.py  normalizer.py  subs.py
transcritor/: main.py  pyproject.toml
transcritor/src/transcritor/: downloader.py
transcritor/tests/: test_pipeline.py
